--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.1.3",
